--- a/style.css
+++ b/style.css
@@ -3,7 +3,9 @@
 * {
   box-sizing: border-box;
 }
+
 body {
+  background-image: linear-gradient(90deg, #86e3ce, #d0e6a5);
 	font-family: "Roboto", "sans-serif";
   display: flex;
   flex-direction: column;
