--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 }
 
 body {
-  background-image: linear-gradient(90deg, #86e3ce, #d0e6a5);
+  background-image: linear-gradient(90deg, #D4145A, #FBB03B);
 	font-family: "Roboto", "sans-serif";
   display: flex;
   align-items: center;
